--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,6 +20,25 @@ header:
 
   - titles:
       # @start locale config
+      en      : &EN       list2
+      en-GB   : *EN
+      en-US   : *EN
+      en-CA   : *EN
+      en-AU   : *EN
+      zh-Hans : &ZH_HANS  關於
+      zh      : *ZH_HANS
+      zh-CN   : *ZH_HANS
+      zh-SG   : *ZH_HANS
+      zh-Hant : &ZH_HANT  關於
+      zh-TW   : *ZH_HANT
+      zh-HK   : *ZH_HANT
+      ko      : &KO       문서2
+      ko-KR   : *KO
+      # @end locale config
+    url: /about.html
+
+  - titles:
+      # @start locale config
       en      : &EN       Archive
       en-GB   : *EN
       en-US   : *EN
