--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ timezone: Asia/Seoul
 author:
   type      : person
   name      : Buoy
-  url       : "https://yourbuoy.kr"
+  url       : https://yourbuoy.kr
   avatar    : # path or url of avatar image (square)
   bio       : I am an amazing person.
   email     : riverpurple7@gmail.com
@@ -173,12 +173,18 @@ defaults:
       aside:
         toc: true
       show_edit_on_github: false
-      show_subscribe: true #feedly.xml 포스팅아래 띄울지
+      show_subscribe: true
       pageview: true
       key: anything
 
-##### https://syki66.github.io/blog/2020/04/16/TeXt-theme-config.html 이거보고 하단 세팅하다가 말았음
-
+      ## 안되는 부분이 있음...
+      mode: immersive #백그라운드 위에 헤더+타이틀 올리기
+      header:
+        theme: dark #어두운배경+글자밝게
+      article_header:
+        type: overlay #포스트 내부 헤더오버레이 적용 (뭔말이여)
+        theme: dark
+      ##### https://syki66.github.io/blog/2020/04/16/TeXt-theme-config.html 이거보고 세팅했으나... 포스트 자동적용 X
 
 ## Plugins
 ##############################
