--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ timezone: Asia/Seoul
 author:
   type      : person
   name      : Buoy
-  url       : "https://yourbuoy.kr"
+  url       : https://yourbuoy.kr
   avatar    : # path or url of avatar image (square)
   bio       : I am an amazing person.
   email     : riverpurple7@gmail.com
@@ -173,7 +173,7 @@ defaults:
       aside:
         toc: true
       show_edit_on_github: false
-      show_subscribe: true #feedly.xml 포스팅아래 띄울지
+      show_subscribe: true
       pageview: true
       key: anything
 
