--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,37 +1,29 @@
 header:
   - titles:
       # @start locale config
-      en      : &EN       Docs
-      en-GB   : *EN
-      en-US   : *EN
-      en-CA   : *EN
-      en-AU   : *EN
+      en      : &EN       Work
       zh-Hans : &ZH_HANS  關於
-      zh      : *ZH_HANS
-      zh-CN   : *ZH_HANS
-      zh-SG   : *ZH_HANS
       zh-Hant : &ZH_HANT  關於
-      zh-TW   : *ZH_HANT
-      zh-HK   : *ZH_HANT
-      ko      : &KO       문서
+      ko      : &KO       메뉴A
       ko-KR   : *KO
       # @end locale config
-    url: /about.html
+    url: /Work.html
+
+  - titles:
+      # @start locale config
+      en      : &EN       Diary
+      zh-Hans : &ZH_HANS  日氣
+      zh-Hant : &ZH_HANT  日氣
+      ko      : &KO       메뉴B
+      ko-KR   : *KO
+      # @end locale config
+    url: /diary.html
 
   - titles:
       # @start locale config
       en      : &EN       Archive
-      en-GB   : *EN
-      en-US   : *EN
-      en-CA   : *EN
-      en-AU   : *EN
       zh-Hans : &ZH_HANS  归档
-      zh      : *ZH_HANS
-      zh-CN   : *ZH_HANS
-      zh-SG   : *ZH_HANS
       zh-Hant : &ZH_HANT  歸檔
-      zh-TW   : *ZH_HANT
-      zh-HK   : *ZH_HANT
       ko      : &KO       아카이브
       ko-KR   : *KO
       # @end locale config
@@ -40,17 +32,8 @@ header:
   - titles:
       # @start locale config
       en      : &EN       About
-      en-GB   : *EN
-      en-US   : *EN
-      en-CA   : *EN
-      en-AU   : *EN
       zh-Hans : &ZH_HANS  关于
-      zh      : *ZH_HANS
-      zh-CN   : *ZH_HANS
-      zh-SG   : *ZH_HANS
       zh-Hant : &ZH_HANT  關於
-      zh-TW   : *ZH_HANT
-      zh-HK   : *ZH_HANT
       ko      : &KO       소개
       ko-KR   : *KO
       # @end locale config
