--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ url     : https://yourbuoy.kr
 baseurl : /
 
 title   : 직장생활표류기
-description: > # this means to ignore newlines until "Language & timezone"
-  직장바다를 표류중인 나와 당신을 구할 부표
+tagline: 직장에서 표류중인 당신을 구할 부표
+description: 직장생활에 왕도는 없지만 요령은 있다. 멘붕을 줄여줄 업무팁, 멘탈관리법을 공유합니다.
 
 
 ## Language and Timezone
@@ -23,7 +23,7 @@ author:
   name      : Buoy
   url       : https://yourbuoy.kr
   avatar    : # path or url of avatar image (square)
-  bio       : I am an amazing person.
+  bio       : # I am an amazing person.
   email     : riverpurple7@gmail.com
 
   facebook  : yourbuoy_kr
@@ -101,7 +101,7 @@ comments:
 
   ## Disqus
   disqus:
-    shortname: "yourbuoy"
+    shortname: yourbuoy
 
 
 ## Pageview
@@ -141,12 +141,11 @@ analytics:
 ##############################
 markdown    : kramdown #markdown개조판
 highlighter : rouge #syntax heilighter
-permalink   : date
+permalink   : /:categories/:title/
 
 # Jekyll 컴파일 시, destination에 필요없는 것들 명시
 exclude:
   - CHANGELOG.md
-  - HOW_TO_RELEASE.md
   - Gemfile
   - Gemfile.lock
   - LICENSE
@@ -176,9 +175,13 @@ defaults:
       show_subscribe: true
       pageview: true
       key: anything
-
-##### https://syki66.github.io/blog/2020/04/16/TeXt-theme-config.html 이거보고 하단 세팅하다가 말았음
-
+      mode: immersive #헤더 모드
+      header:
+        theme: dark
+      article_header:
+        type: overlay # 포스트 내부헤더 오버레이 적용여부
+        theme: dark
+        background_color: '#203028'
 
 ## Plugins
 ##############################
