Contact - Git link 수정

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   twitter   : yourbuoy_kr
   medium    :
   linkedin  :
-  github    : yourbuoy
+  github    : BoraKang/yourbuoy
 
 
 ## GitHub Repository
