SEO: 구조화된 데이터 + GA기본 코드 삽입

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url     : https://yourbuoy.kr
 baseurl : /
 
 title   : 직장생활표류기
-tagline: 직장에서 표류중인 당신을 구할 부표
+tagline: 직장에서 표류중인 당신을 위한 팁
 description: 직장생활에 왕도는 없지만 요령은 있다. 일잘러가 되고 싶은 당신의 멘붕을 줄여줄 업무팁, 멘탈관리법을 공유합니다.
 thumbnail: "/images/thumbnail.png"
 
